--- a/index.html
+++ b/index.html
@@ -1,8 +1,40 @@
-<html>
-<head>
-<title>Test</title>
-</head>
-<body>
-Test
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Asteroid Prospector | Holding Page</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1>Asteroid Prospector</h1>
+
+    <p>A browser based hame involving mining asteroids. Part of the <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector/">2014 NASA Space Apps Challenge</a>.</p>
+
+    <p>This is the holding page for the project itself. Check back on April the 12th for updates!</p>
+
+    <p><b>More resources</b>
+      <ul>
+        <li>Exeter Team Tumblr: <a href="http://asteroidprospectorexeter.tumblr.com">http://asteroidprospectorexeter.tumblr.com</a></li>
+        <li>GitHub Reposiroty: <a href="https://github.com/killfall/asteroid-prospector">https://github.com/killfall/asteroid-prospector</a></li>
+        <li>Challenge Page: <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">https://2014.spaceappschallenge.org/challenge/asteroid-prospector</a></li>
+      </ul>
+    </p>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  </body>
 </html>
+
