--- a/index.html
+++ b/index.html
@@ -1,57 +1,39 @@
-<html class="no-js">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <style>
-        html, body {
-            padding: 0;
-            margin: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-        body:after {
-            font-size: 30px;
-            line-height: 140px;
-            text-align: center;
-            color: rgb(60, 16, 11);
-            background: rgba(255, 255, 255, 0.6);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 400px;
-            height: 140px;
-            margin-left: -200px;
-            margin-top: -70px;
-            border-radius: 5px;
-        }
-        body.before-game:after {
-            content: 'press "z" to start';
-        }
-        body.lose-game:after {
-            content: 'press "z" to try again';
-        }
-        body.win-game:after {
-            content: 'Win! press "z" to play again';
-        }
-        body {
-            background-color: #1B1464;
-        }
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Asteroid Prospector | Holding Page</title>
 
-        .overlay {
-            color: #FFFFFF;
-        }
-    </style>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
-    <div class="overlay">Score: <span id="score"></span></div>
-    <div class="overlay">Time: <span id="time"></span></div>
-    <canvas id="viewport"></canvas>
+    <h1>Asteroid Prospector</h1>
 
-    <script src="js/require.js"></script>
-    <script src="js/main.js"></script>
+    <p>A browser based hame involving mining asteroids. Part of the <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector/">2014 NASA Space Apps Challenge</a>.</p>
+
+    <p><a href="game.html">Play the game!</a></p>
+
+    <p><b>More resources</b>
+      <ul>
+        <li>Exeter Team Tumblr: <a href="http://asteroidprospectorexeter.tumblr.com">http://asteroidprospectorexeter.tumblr.com</a></li>
+        <li>GitHub Reposiroty: <a href="https://github.com/killfall/asteroid-prospector">https://github.com/killfall/asteroid-prospector</a></li>
+        <li>Challenge Page: <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">https://2014.spaceappschallenge.org/challenge/asteroid-prospector</a></li>
+      </ul>
+    </p>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   </body>
 </html>
