--- a/game.html
+++ b/game.html
@@ -53,5 +53,16 @@
 
     <script src="js/require.js"></script>
     <script src="js/main.js"></script>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-49829161-1', 'killfall.github.io');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
