New index page, css and images.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
+	<link rel="stylesheet" href="css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,20 +17,41 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Asteroid Prospector</h1>
+	<div id="wrap">
+		<div id="header">
+			<h1>Asteroid Prospector</h1>
+		</div>
+		
+		<div id="sidebar">
+			<h6>Resources</h6>
+			<ul>
+				<li><a href="http://killfall.github.io/asteroid-prospector/">Play</a></li>
+				<li><a href="http://asteroidprospectorexeter.tumblr.com">Exeter Team Tumblr</a></li>
+				<li><a href="https://github.com/killfall/asteroid-prospector">GitHub Repositorty</a></li>
+				<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">Challenge Page</a></li>
+			  </ul>
+		</div>
+		
+		<div id="main">
+			<h3>About Asteroid Prospector</h3>
+			<p>Asteroid Prospector is a 2D browser based game set in the 30th century after humanity has expanded its reach beyond Earth. To support the expanding population of the Mars colony humanity has turned to asteroids as a source of raw materials. You are one of many freelance asteroid miners, using your ship to mine vital resources from the numerous asteroids hurtling across the Solar system.</p>
+			<p>Asteroid Prospector is being developed as part of the <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector/">2014 NASA Space Apps Challenge</a>.</p>
 
-    <p>A browser based hame involving mining asteroids. Part of the <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector/">2014 NASA Space Apps Challenge</a>.</p>
-
-    <p><a href="game.html">Play the game!</a></p>
-
-    <p><b>More resources</b>
-      <ul>
-        <li>Exeter Team Tumblr: <a href="http://asteroidprospectorexeter.tumblr.com">http://asteroidprospectorexeter.tumblr.com</a></li>
-        <li>GitHub Reposiroty: <a href="https://github.com/killfall/asteroid-prospector">https://github.com/killfall/asteroid-prospector</a></li>
-        <li>Challenge Page: <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">https://2014.spaceappschallenge.org/challenge/asteroid-prospector</a></li>
-      </ul>
-    </p>
-
+			<p>This page will be undergoing frequent updates throughout the Space Apps Challenge, check back regularly to try out the latest version of the game!</p>
+			
+			<p>Play the latest version (0.1) <a href="http://killfall.github.io/asteroid-prospector/">here</a>!</p>
+			
+			<div id="progress">
+				<h3>Current Progress</h3>
+				<p>The screenshot below shows what the current version looks like. So far you can destroy asteroids and gain points for each piece of debris you collect. There is currently a time limit of 30 seconds per game.</p>
+				<img src="webwebimages/screen1.png"/>
+			</div>
+		</div>
+		
+		<div id="footer">
+			<p>This project is part of the <a href="https://2014.spaceappschallenge.org">NASA SpaceApps Challenge</a>.</p>
+		</div>
+	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -48,3 +69,4 @@
     </script>
   </body>
 </html>
+
