Added multiple asteroid types

--- a/game.html
+++ b/game.html
@@ -47,7 +47,9 @@
     </style>
   </head>
   <body>
-    <div class="overlay">Score: <span id="score"></span></div>
+    <div class="overlay">Score 1: <span id="score1"></span></div>
+    <div class="overlay">Score 2: <span id="score2"></span></div>
+    <div class="overlay">Score 3: <span id="score3"></span></div>
     <div class="overlay">Time: <span id="time"></span></div>
     <canvas id="viewport"></canvas>
 
