--- a/game.html
+++ b/game.html
@@ -44,20 +44,32 @@
 					<div class="btnContainer">
 						<a href="game.html" class="btn btn-warning" id="restartGameBtn" value="Restart Game" >Restart Game</a></li>
 					</div>
-					<ul class="nav navbar-nav pull-right">
-						<li><a href="#score">Score: <span id="score"></span></a></li>
-						<li><a href="#time">Time: <span id="time"></span></a></li>
-					</ul>
+
+					<div class="fuelbar pull-right">
+					FUEL
+						<div class="progress progress-striped" id="fuel">
+						  <div class="progress-bar progress-bar-info"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+						    <span class="sr-only">100</span>
+						  </div>
+						</div>
+					</div>
+
+					<div class="scores pull-right">
+						<span class="preciousMetals" data-toggle="tooltip" data-placement="bottom" title="Precious Metals are worth money"><span class="badge">0</span> METALS</span>
+						<span class="constructionMaterials"  data-toggle="tooltip" data-placement="bottom" title="Construction Materials can be used for building and colonisation"><span class="badge">0</span> CONSTRUCT</span>
+						<span class="waste" data-toggle="tooltip" data-placement="bottom" title="Waste is worthless, but it's bad to leave it flying around in space"><span class="badge">0</span> WASTE</span>
+					</div>
+
 				</div>
 		</div>
 
 		<canvas id="viewport"></canvas>
 
-		<div id="gameStartModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		<div id="gameStartModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="label1" aria-hidden="true">
 		  <div class="modal-dialog modal-lg">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <h4 class="modal-title" id="myModalLabel">Welcome to APE Mining Incorporated!</h4>
+		        <h4 class="modal-title" id="label1">Welcome to APE Mining Incorporated!</h4>
 		      </div>
 		      <div class="modal-body">
 					<p>Introduction Game Text</p>
@@ -69,15 +81,31 @@
 		  </div>
 		</div>
 
-		<div id="gameHandbookModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		<div id="gameOver" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="label2" aria-hidden="true">
+		  <div class="modal-dialog modal-lg">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h4 class="modal-title" id="label2">GAME OVER</h4>
+		      </div>
+		      <div class="modal-body">
+					<p>Game over message.</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
+		<div id="gameHandbookModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="label3" aria-hidden="true">
 		  <div class="modal-dialog modal-lg">
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		        <h4 class="modal-title" id="myModalLabel">APE: Employee Handbook</h4>
+		        <h4 class="modal-title" id="label3">APE: Employee Handbook</h4>
 		      </div>
 		      <div class="modal-body">
-					<p>Handbook text</p>
+					<p>Loading handbook ...</p>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn" data-dismiss="modal">Close</button>
