--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>APE Mining Incorporation</title>
+		<title>APE Mining Corporation</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
 
 		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand">APE Mining Incorporated</a>
+					<a href="#" class="navbar-brand">APE Mining Corporation</a>
 				</div>
 				<div class="navbar-collapse ">
 					<ul class="nav navbar-nav">
@@ -69,7 +69,7 @@
 		  <div class="modal-dialog modal-lg">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <h4 class="modal-title" id="label1">Welcome to APE Mining Incorporated!</h4>
+		        <h4 class="modal-title" id="label1">Welcome to the APE Mining Corporation!</h4>
 		      </div>
 		      <div class="modal-body">
 					<p>Introduction Game Text</p>
