--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div id="sidebar">
 				<h6>Resources</h6>
 				<ul>
-					<li><a href="/">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="game.html">Play</a></li>
 					<li><a href="versions.html">Version History</a></li>
 					
