--- a/versions.html
+++ b/versions.html
@@ -20,7 +20,7 @@
   <body id="bg">
 		<div id="wrap">
 			<div id="header">
-				<h1><a href="/">Asteroid Prospector</a></h1>
+				<h1>Asteroid Prospector</h1>
 			</div>
 				
 			<div id="sidebar">
