fixed fuel and now we have game scores

--- a/game.html
+++ b/game.html
@@ -25,13 +25,13 @@
 
 		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand">APE Mining Corporation</a>
+					<a href="#" class="navbar-brand"><i class="glyphicon glyphicon-globe"></i> APE Mining Corporation</a>
 				</div>
 				<div class="navbar-collapse ">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html">Home</a></li>
-						<li class="active"><a href="game.html">Game</a></li>
-						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#handbook">Employee Handbook
+						<li><a href="index.html"><i class="glyphicon glyphicon-home"></i> Home</a></li>
+						<li class="active"><a href="game.html"><i class="glyphicon glyphicon-play"></i> Game</a></li>
+						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#handbook"><i class="glyphicon glyphicon-list-alt"></i> Employee Handbook
 							<b class="caret"></b>
 							</a>
 							<ul class="dropdown-menu">
@@ -54,10 +54,11 @@
 						</div>
 					</div>
 
-					<div class="scores pull-right">
+					<div id="scores" class=" pull-right">
 						<span class="preciousMetals" data-toggle="tooltip" data-placement="bottom" title="Precious Metals are worth money"><span class="badge">0</span> METALS</span>
 						<span class="constructionMaterials"  data-toggle="tooltip" data-placement="bottom" title="Construction Materials can be used for building and colonisation"><span class="badge">0</span> CONSTRUCT</span>
 						<span class="waste" data-toggle="tooltip" data-placement="bottom" title="Waste is worthless, but it's bad to leave it flying around in space"><span class="badge">0</span> WASTE</span>
+						<span class="money"><i class="glyphicon glyphicon-usd"></i> <span class="badge">0</span> CASH </span>
 					</div>
 
 				</div>
