--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
 
 		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand">APE Mining Corporation</a>
+					<a href="index.html" class="navbar-brand">APE Mining Corporation</a>
 				</div>
 				<div class="navbar-collapse ">
 					<ul class="nav navbar-nav">
@@ -73,6 +73,7 @@
 		      </div>
 		      <div class="modal-body">
 					<p>Hello freelance Mining Operative F-00125. Welcome aboard your Class 01 mining vessel.  </p>
+					<p>Use left and right arrows to rotate your ship, up arrow for thrust.  The spacebar will deploy mining drones.</p>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-primary" id="gameStartBtn">Lets Start Mining!</button>
