Added control image

--- a/game.html
+++ b/game.html
@@ -74,7 +74,7 @@
 		      </div>
 		      <div class="modal-body">
 					<p>Hello freelance Mining Operative F-00125. Welcome aboard your Class 01 mining vessel.  </p>
-					<p>Use left and right arrows to rotate your ship, up arrow for thrust.  The spacebar will deploy mining drones.</p>
+					<p><img src="images/controls.png"></p>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-primary" id="gameStartBtn">Lets Start Mining!</button>
