added final game score breakdown

--- a/game.html
+++ b/game.html
@@ -94,6 +94,10 @@
 					<p><strong>Escape pod launched.</strong> Docking will commence automatically.</p>
 					<div class="finalscore well">
 		      	<h2>Your Final Score: <span>0</span></h2>
+		      	<h3>You managed to mine:</h3>
+		      	<p><img src="images/pickupP.png"> <span class="preciousMetals"></span> tonnes of precious metals</p>
+		      	<p><img src="images/pickupC.png"> <span class="constructionMaterials"></span> tonnes of construction materials</p>
+		      	<p><img src="images/pickupW.png"> ... and collected <span class="waste"></span> tonnes of waste!</p>
 		      </div>
 					<p>You still have quotas to meet - get back out there as soon as possible! </p>
 		      </div>
