--- a/index-de.html
+++ b/index-de.html
@@ -24,12 +24,14 @@
 				
 			<div id="sidebar">
 				<ul>
-					<li><a href="game.html"><button type="button" style="width:100%;" class="btn btn-success btn-lg">Play</button></a></li>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="versions.html">Version History</a></li>				
-					<li><a href="http://asteroidprospectorexeter.tumblr.com">Exeter Team Tumblr</a></li>
-					<li><a href="https://github.com/killfall/asteroid-prospector">GitHub Repository</a></li>
-					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">Challenge Page</a></li>
+					<li><a href="game.html"><button type="button" style="width:100%;" class="btn btn-success btn-lg">Play</button></a></li><br>
+					<li><a href="index.html"><button type="button" style="width:100%;" class="btn btn-info">Home</button></a></li>
+					<li><a href="story.html"><button type="button" style="width:100%;" class="btn btn-info">Story</button></a></li>
+					<li><a href="credits.html"><button type="button" style="width:100%;" class="btn btn-info">Credits</button></a></li>
+					<li><a href="versions.html"><button type="button" style="width:100%;" class="btn btn-info">Versions</button></a></li>
+					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-info">Team Tumblr</button></a></li>
+					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">GitHub</button></a></li>
+					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">The Challenge</button></a></li>
 					<li><a href="index.html"><img src="webimages/uk.png"/></a></li>
 					<li><a href="index-it.html"><img src="webimages/italy.png"/></a></li>
 					<li><a href="index-pl.html"><img src="webimages/poland.png"/></a></li>
