--- a/res/handbook/achieve/list.html
+++ b/res/handbook/achieve/list.html
@@ -5,30 +5,21 @@
 
 <div class="achievements">
 
-	<div class="row" id="achievement1">
-		<div class="col-md-4">
-			Achievement: Water the chances!
-		</div>
-		<div class="col-md-8">
-			Store 100 water
-		</div>
-	</div>
-
-	<div class="row" id="achievement2">
+	<div class="row" id="achievement_p">
 		<div class="col-md-4">
 			Achievement: My Precious!
 		</div>
 		<div class="col-md-8">
-			Store 100 units of precious metals
+			Store 10 tonnes of precious metals
 		</div>
 	</div>
 
-	<div class="row" id="achievement3">
+	<div class="row" id="achievement_w">
 		<div class="col-md-4">
-			Achievement: Iron Lady
+			Achievement: Waste not want not
 		</div>
 		<div class="col-md-8">
-			Store 100 units of iron
+			Collect 10 units of Waste
 		</div>
 	</div>
 
