--- a/story.html
+++ b/story.html
@@ -122,48 +122,48 @@
 							<td><img src="images/pickupC.png"></td>
 							<td>Nitrogen</td>	
 							<td>Many applications from growing plants to making electronics.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/nitrogen.png"></td>	
 						</tr>	
 						<tr>
 							<td><img src="images/pickupP.png"></td>
 							<td>Platinum</td>	
 							<td>Found in large quantities.  Useful as a catalyst and retains its high value on Earth.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/pt.png"></td>	
 						</tr>	
 						<tr>
 							<td><img src="images/pickupP.png"></td>
 							<td>Iridium</td>	
 							<td>Used in the power generators that keep your lights on.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/ir.png"></td>	
 						</tr>	
 						<tr>
 							<td><img src="images/pickupP.png"></td>
 							<td>Palladium</td>	
 							<td>Helps run your electronics.  Poor man's platinum.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/pa.png"></td>
 						</tr>	
 						<tr>
 							<td><img src="images/pickupP.png"></td>
 							<td>Gold</td>	
 							<td>Shiny!  It's also used in your space helmet's sun visor.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/au.png"></td>	
 						</tr>	
 						<tr>
 							<td><img src="images/pickupP.png"></td>
 							<td>Rhodium</td>	
 							<td>It's really rare on Earth.  People still love something that's one of a kind.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/rh.png"></td>	
 						</tr>	
 						<tr>
 							<td><img src="images/pickupP.png"></td>
 							<td>Ruthenium</td>	
 							<td>Used in small quantities to make solar panels that keep satellites floating.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/ru.png"></td>	
 						<tr>
 							<td><img src="images/pickupW.png"></td>
 							<td>Space waste</td>	
 							<td>Not a complete waste.  Can be used to build houses back on Mars.</td>	
-							<td><img src=""></td>	
+							<td><img src="webimages/waste.png"></td>	
 						</tr>	
 					</table>
 				</div>	
