linked up story and minerals to story page

--- a/game.html
+++ b/game.html
@@ -36,9 +36,8 @@
 							<b class="caret"></b>
 							</a>
 							<ul class="dropdown-menu">
-								<li><a id="handbook-company" href="#">			<i class="fa-building-o fa-static"></i> Company Messages</a></li>
-								<li><a id="handbook-achievements" href="#">	<i class="fa-certificate fa-static"></i> Achievements</a></li>
-								<li><a id="handbook-mining" href="#">				<i class="fa-static"></i> Mining Information</a></li>
+								<li><a id="handbook-achievements" href="#">	<i class="glyphicon glyphicon-certificate"></i> Achievements</a></li>
+								<li><a id="handbook-mining" href="story.html" target="_blank"><i class="glyphicon glyphicon-info-sign"></i> Mining Information</a></li>
 							</ul>
 						</li>
 					</ul>
