Added latest version to version history. Modified sidebar to scroll with page. Updated credits.

--- a/credits.html
+++ b/credits.html
@@ -81,6 +81,7 @@
 							<li>Jack Livsey</li>
 							<li>Jacob Tomlinson</li>
 							<li>Karina Williams</li>
+							<li>Ketaki Sharma</li>
 							<li>Kris Sum</li>
 							<li>Oli Bird</li>
 							<li>Paul Rogers</li>
