--- a/versions.html
+++ b/versions.html
@@ -41,6 +41,7 @@
 					
 					<div id="versionTable">
 						<ul>
+							<li><a href="#v0.6">v0.6</a></li>
 							<li><a href="#v0.5">v0.5</a></li>
 							<li><a href="#v0.4">v0.4</a></li>
 							<li><a href="#v0.3">v0.3</a></li>
@@ -48,6 +49,20 @@
 							<li><a href="#v0.1">v0.1</a></li>
 						</ul>
 					</div>
+					<h4 id="v0.6">v0.6</h4>
+					<p>Changes in version 0.6:</p>
+					<ul>
+						<li>Added 3 achievements:</li>
+							<ul>
+								<li>My precious: Store 10 tonnes of precious metals.</li>
+								<li>Waste not want not: Store 10 tonnes of waste.</li>
+								<li>Build it and they will come: Store 15 tonnes of construction materials.</li>
+							</ul>
+						<li>Mini-map updated with different colours to distinguish asteroid types. Your ship is now represented by a red dot and the Space station is now a large white dot.
+						<li>APE Minung Corporation logo added to space station.</li>
+					</ul>
+					<img src="webimages/screen06.png" alt="Asteroid Prospector v0.6"/>
+					
 					<h4 id="v0.5">v0.5</h4>
 					<p>Changes in version 0.5:</p>
 					<ul>
