Added info to version history v0.5.

--- a/versions.html
+++ b/versions.html
@@ -67,6 +67,7 @@
 					<p>Changes in version 0.5:</p>
 					<ul>
 						<li>Captured resources can now be converted to cash (points) by docking with the space station. A report is displayed showing a breakdown of the collected resources.</li>
+						<li>Collecting the 'fuel' resource type from asteroids will replenish your fuel supply. Docking with the space station will also refill your fuel tanks.</li>
 						<li>A summary screen is displayed when you crash/run out of fuel showing your points breakdown.</li>
 						<li>Added control instructions at the beginning of the game.</li>
 						<li>Stars added to background.</li>
