Credited flag images and added me(!) under project management :-)

--- a/credits.html
+++ b/credits.html
@@ -99,6 +99,14 @@
 							<li>Elena Meneguz - IT</li>
 							<li>Karina Williams - DE</li>
 						</ul>
+					<h5>Project Management</h5>
+						<ul>
+							<li>Ian Gentry</li>
+						</ul>	
+					<h5>Other</h5>
+						<ul>
+							<li>Flag Images by <a href="http://www.icondrawer.com">IconDrawer</a></li>
+						</ul>
 			</div>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
