--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
 					<li><a href="story.html"><button type="button" style="width:100%;" class="btn btn-info">Story</button></a></li>
 					<li><a href="credits.html"><button type="button" style="width:100%;" class="btn btn-info">Credits</button></a></li>
 					<li><a href="versions.html"><button type="button" style="width:100%;" class="btn btn-info">Versions</button></a></li>
-					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-info">Team Tumblr</button></a></li>
-					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">GitHub</button></a></li>
-					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">The Challenge</button></a></li>
-					<li><a href="index.html"><img src="webimages/uk.png"/></a></li>
-					<li><a href="index-it.html"><img src="webimages/italy.png"/></a></li>
-					<li><a href="index-pl.html"><img src="webimages/poland.png"/></a></li>
-					<li><a href="index-de.html"><img src="webimages/germany.png"/></a></li>
-					<li><a href="index-in.html"><img src="webimages/india.png"/></a></li>
+					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-info">Team Tumblr <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">GitHub <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">The Challenge <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li>
+						<small>Languages</small><br />
+						<a href="index.html"><img class="lang-img" src="webimages/uk.png"/></a>
+						<a href="index-it.html"><img class="lang-img" src="webimages/italy.png"/></a>
+						<a href="index-pl.html"><img class="lang-img" src="webimages/poland.png"/></a>
+						<a href="index-de.html"><img class="lang-img" src="webimages/germany.png"/></a>
+						<a href="index-in.html"><img class="lang-img" src="webimages/india.png"/></a>
+					</li>
 				  </ul>
 			</div>
 			
