--- a/credits.html
+++ b/credits.html
@@ -30,9 +30,10 @@
 					<li><a href="story.html"><button type="button" style="width:100%;" class="btn btn-info">Story</button></a></li>
 					<li><a href="credits.html"><button type="button" style="width:100%;" class="btn btn-info">Credits</button></a></li>
 					<li><a href="versions.html"><button type="button" style="width:100%;" class="btn btn-info">Versions</button></a></li>
-					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-info">Team Tumblr</button></a></li>
-					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">GitHub</button></a></li>
-					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">The Challenge</button></a></li>
+					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-info">Team Tumblr <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">GitHub <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">The Challenge <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li>
 				</ul>
 			</div>
 			
