added French translation

--- a/credits.html
+++ b/credits.html
@@ -99,6 +99,8 @@
 						<ul>
 							<li>Elena Meneguz - IT</li>
 							<li>Karina Williams - DE</li>
+							<li>Anke Finnenkötter - DE</li>
+							<li>Franck Davanier - FR</li>
 						</ul>
 					<h5>Project Management</h5>
 						<ul>
