--- a/index-de.html
+++ b/index-de.html
@@ -39,6 +39,7 @@
 						<a href="index-pl.html"><img class="lang-img" src="webimages/poland.png"/></a>
 						<a href="index-de.html"><img class="lang-img" src="webimages/germany.png"/></a>
 						<a href="index-in.html"><img class="lang-img" src="webimages/india.png"/></a>
+						<a href="index-fr.html"><img class="lang-img" src="webimages/france.png"/></a>
 					</li>
 				  </ul>
 			</div>
@@ -48,7 +49,7 @@
 				
 				<p>Heute ist das Jahr 2128. Aufgrund von Bevölkerungskontrolle und Umweltpolitik beträgt die Bevölkerung von Erde und Mond feststehend 11 Millionen. Es gibt keine Mineralressourcen. Alle anderen Ressourcen sind recycelt oder nachhaltig. Die Marskolonie wächst weiter, aber die dortigen Ressourcen sind bereits am Limit.<p>
 
-				<p>Die APE Mining Corp ist der größte Bergbaukonzern im Sonnensystem. Sie eröffnet eine neue Grenze - im Asteroidengürtel. Du bist ein junger Marsbewohner und seit kurzem freiberuflich als Bergknappe tätig. Diese Arbeitstelle ist einsam und manchmal gefährlich und die Gesellschaft ist heimlichtuerisch und geheimnisvoll, aber du bist jung und brauchst das Geld...<p>
+				<p>Die APE Mining Corp ist der größte Bergbaukonzern im Sonnensystem. Sie eröffnet einen neuen Außenhandelsposten - im Asteroidengürtel. Du bist ein junger Marsbewohner und seit kurzem freiberuflich als Bergknappe tätig. Diese Arbeitstelle ist einsam und manchmal gefährlich und die Gesellschaft ist heimlichtuerisch und geheimnisvoll, aber du bist jung und brauchst das Geld...<p>
 
 				<p>Asteroid Prospector wird im Rahmen des <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector/">2014 NASA Space Apps Challenge</a> entwickelt.</p>				
 			
