--- a/index-in.html
+++ b/index-in.html
@@ -39,6 +39,7 @@
 						<a href="index-pl.html"><img class="lang-img" src="webimages/poland.png"/></a>
 						<a href="index-de.html"><img class="lang-img" src="webimages/germany.png"/></a>
 						<a href="index-in.html"><img class="lang-img" src="webimages/india.png"/></a>
+						<a href="index-fr.html"><img class="lang-img" src="webimages/france.png"/></a>
 					</li>
 				  </ul>
 			</div>
