updated language credits

--- a/credits.html
+++ b/credits.html
@@ -97,10 +97,11 @@
 						</ul>
 					<h5>Translations</h5>
 						<ul>
-							<li>Elena Meneguz - IT</li>
-							<li>Karina Williams - DE</li>
-							<li>Anke Finnenkötter - DE</li>
-							<li>Franck Davanier - FR</li>
+							<li>Elena Meneguz - Italian</li>
+							<li>Karina Williams - German</li>
+							<li>Anke Finnenkötter - German</li>
+							<li>Franck Davanier - French</li>
+                                                        <li>Ketaki Sharma - Hindi</li>
 						</ul>
 					<h5>Project Management</h5>
 						<ul>
