Added tutorial video

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<p>This page will be undergoing frequent updates throughout the Space Apps Challenge, check back regularly to try out the latest version of the game!</p>
 					
 				<div id="progress">
-					<img src="webimages/screen.png"/>
+					<a href="game.html"><img src="webimages/screen.png"/></a>
 				</div>
 			</div>
 	</div>
