--- a/game.html
+++ b/game.html
@@ -76,7 +76,8 @@
 		      <div class="modal-body">
 					<p><h4>Hello freelance Mining Operative F-00125. Welcome aboard your Class 01 mining vessel.</h4>  </p>
 					<p><h4>Bring mined resources back to the APE Station to get paid!</h4></p>
-					<p style="margin-top:50px;"><img src="images/controls.png"></p>
+					<h3>How to play</h3>
+					<iframe width="560" height="315" src="//www.youtube.com/embed/s3N34TODZBk" frameborder="0" style="display:block;" allowfullscreen></iframe>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-primary" id="gameStartBtn">Lets Start Mining!</button>
