Added link to screenshot

--- a/index-fr.html
+++ b/index-fr.html
@@ -58,7 +58,7 @@
 				<p>Cette page sera mise à jour fréquemment pendant le Space Apps Challenge. Vérifiez régulièrement pour essayer la plus récente version du jeu!</p>
 					
 				<div id="progress">
-					<img src="webimages/screen.png"/>
+					<a href="game.html"><img src="webimages/screen.png"/></a>
 				</div>
 			</div>
 	</div>
