--- a/index-in.html
+++ b/index-in.html
@@ -52,7 +52,7 @@
 				<p>सौर मंडल की सबसे बड़ी कंपनी- एपीई माइनिंग कारपोरेशन अब क्षुद्रग्रह घेरे (asteroid belt) मे अपना अनूठा अभियान शुरू करने के लिए तैयार हैं. इसका कार्य भार मंगल ग्रह के अनुभवी युवा ने स्वतंत्र रूप से संभाला हैं. हालाँकि यह काम काफी खतरों और मुश्किलों वाला हैं जिसके लिए महीनों तक अंतरीक्ष में रहने की आवश्यकता हैं. इन सब के बावजूद कंपनी इस कार्य को अंजाम देने के लिए तत्पर हैं… <p>
 			
 				<div id="progress">
-					<img src="webimages/screen.png"/>
+					<a href="game.html"><img src="webimages/screen.png"/></a>
 				</div>	
 	
 			</div>
