--- a/index-it.html
+++ b/index-it.html
@@ -56,7 +56,7 @@
 				<p>Questa pagina è in costruzione e verrà aggiornata a più riprese durante la competizione: visitala regolarmente per provare la versione più recente del gioco!</p>
 					
 				<div id="progress">
-					<img src="webimages/screen.png"/>
+					<a href="game.html"><img src="webimages/screen.png"/></a>
 				</div>		
 	
 					
