--- a/index-pl.html
+++ b/index-pl.html
@@ -52,7 +52,7 @@
 				<p>APE Mining Corp, największy koncern górniczy w układzie słonecznym, otwiera nową granicę - w pasie asteroid. Jesteś młody Martian. Zacząłeś prace z firmą jako niezależny operacyjny górniczego.Praca wymaga wydatków miesięcy w czasie w przestrzeni, czasami niebezpieczne i firma jest tajemnicza i niezbadane biurokracja, ale potrzebujesz pracy...<p>
 			
 				<div id="progress">
-					<img src="webimages/screen.png"/>
+					<a href="game.html"><img src="webimages/screen.png"/></a>
 				</div>	
 	
 			</div>
