--- a/index-de.html
+++ b/index-de.html
@@ -54,7 +54,7 @@
 				<p>Asteroid Prospector wird im Rahmen des <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector/">2014 NASA Space Apps Challenge</a> entwickelt.</p>				
 			
 				<div id="progress">
-					<img src="webimages/screen.png"/>
+					<a href="game.html"><img src="webimages/screen.png"/></a>
 				</div>	
 				
 			</div>
