--- a/index-pl.html
+++ b/index-pl.html
@@ -29,9 +29,14 @@
 					<li><a href="story.html"><button type="button" style="width:100%;" class="btn btn-info">Story</button></a></li>
 					<li><a href="credits.html"><button type="button" style="width:100%;" class="btn btn-info">Credits</button></a></li>
 					<li><a href="versions.html"><button type="button" style="width:100%;" class="btn btn-info">Versions</button></a></li>
-					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-info">Team Tumblr <i class="glyphicon glyphicon-new-window"></i></button></a></li>
-					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">GitHub <i class="glyphicon glyphicon-new-window"></i></button></a></li>
-					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-info">The Challenge <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+
+					<li><small>External Links</small></li>
+					<li><a href="http://asteroidprospectorexeter.tumblr.com"><button type="button" style="width:100%;" class="btn btn-warning">Tumblr <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://twitter.com/APEMining"><button type="button" style="width:100%;" class="btn btn-warning">Twitter <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://www.youtube.com/channel/UCaFdlzqFGWucaYjafSM1D4A"><button type="button" style="width:100%;" class="btn btn-warning">YouTube <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://github.com/killfall/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-warning">GitHub <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector"><button type="button" style="width:100%;" class="btn btn-warning">The Challenge <i class="glyphicon glyphicon-new-window"></i></button></a></li>
+					<li><a href="https://2014.spaceappschallenge.org/project/asteroid-prospector-exeter/"><button type="button" style="width:100%;" class="btn btn-warning">Our Submission <i class="glyphicon glyphicon-new-window"></i></button></a></li>
 					<li>
 						<small>Languages</small><br />
 						<a href="index.html"><img class="lang-img" src="webimages/uk.png"/></a>
