Moved website into /original, Created shiny new responsive landing page, Updated all links.

--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a id="handbook-achievements" href="#">	<i class="glyphicon glyphicon-certificate"></i> Achievements</a></li>
-								<li><a id="handbook-mining" href="story.html" target="_blank"><i class="glyphicon glyphicon-info-sign"></i> Mining Information</a></li>
+								<li><a id="handbook-mining" href="/original/story.html" target="_blank"><i class="glyphicon glyphicon-info-sign"></i> Mining Information</a></li>
 							</ul>
 						</li>
 					</ul>
