--- a/original/story.html
+++ b/original/story.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="images/ship.png">
+	<link rel="icon" type="image/png" href="/images/ship.png">
     <title>Asteroid Prospector | Home</title>
 
     <!-- Bootstrap -->
@@ -50,17 +50,17 @@
 						<tr>
 							<td>Mining Analysis:</td>	
 							<td>Asteroid type C (Carbonaceous): common (75% of all asteroids); rich in Fuel</td>	
-							<td><img src="images/asteroidC1.png"></td>	
+							<td><img src="/images/asteroidC1.png"></td>	
 						</tr>
 						<tr>
 							<td>Mining Analysis:</td>	
 							<td>Asteroid type S (Silicaceous): rare (17% of all asteroids); contain precious metals</td>	
-							<td><img src="images/asteroidS3.png"></td>	
+							<td><img src="/images/asteroidS3.png"></td>	
 						</tr>
 						<tr>
 							<td>Mining Analysis:</td>	
 							<td>Asteroid type M (Metallic) very rare (8% of all asteroids); contain common metals</td>	
-							<td><img src="images/asteroidM2.png"></td>	
+							<td><img src="/images/asteroidM2.png"></td>	
 						</tr>				
 					</table>
 				</div>
@@ -70,102 +70,102 @@
 				<div class="table-bordered">
 					<table class="table">
 						<tr>
-							<td><img src="images/pickupF.png"></td>	
+							<td><img src="/images/pickupF.png"></td>	
 							<td>Helium:</td>	
 							<td>Nuclear fusion fuel for maximum propulsion!</td>	
 							<td><img src="webimages/he.png"></td>	
 						</tr>
 						<tr>
-							<td><img src="images/pickupF.png"></td>	
+							<td><img src="/images/pickupF.png"></td>	
 							<td>Uranium</td>	
 							<td>Fuels the latest nuclear fission engines.</td>	
 							<td><img src="webimages/u.png"></td>
 						</tr>
 						<tr>
-							<td><img src="images/pickupF.png"></td>	
+							<td><img src="/images/pickupF.png"></td>	
 							<td>Hydrogen</td>	
 							<td>The go-to rocket fuel.</td>	
 							<td><img src="webimages/h.png"></td>	
 						</tr>
 						<tr>
-							<td><img src="images/pickupF.png"></td>	
+							<td><img src="/images/pickupF.png"></td>	
 							<td>Water</td>	
 							<td>Ingredient for rocket fuel also used in life support and radiation shielding.</td>	
 							<td><img src="webimages/water.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupC.png"></td>	
+							<td><img src="/images/pickupC.png"></td>	
 							<td>Nickel</td>	
 							<td>Withstands high temperatures, crucial for rocket construction and repair.</td>	
 							<td><img src="webimages/ni.png"></td>
 						</tr>	
 						<tr>
-							<td><img src="images/pickupC.png"></td>
+							<td><img src="/images/pickupC.png"></td>
 							<td>Aluminium</td>	
 							<td>Quite common but very useful due to its toughness, light weight and ease of recycling.</td>	
 							<td><img src="webimages/al.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupC.png"></td>
+							<td><img src="/images/pickupC.png"></td>
 							<td>Magnesium</td>	
 							<td>Very lightweight so is used in alloys to improve mechanical properties.</td>	
 							<td><img src="webimages/mg.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupC.png"></td>
+							<td><img src="/images/pickupC.png"></td>
 							<td>Silicon</td>	
 							<td>Everything has a microchip in it, every microchip needs silicon.</td>	
 							<td><img src="webimages/si.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupC.png"></td>
+							<td><img src="/images/pickupC.png"></td>
 							<td>Iron</td>	
 							<td>Used for manufacturing large hardware in space colonisation.</td>	
 							<td><img src="webimages/fe.png"></td>
 						</tr>	
 						<tr>
-							<td><img src="images/pickupC.png"></td>
+							<td><img src="/images/pickupC.png"></td>
 							<td>Nitrogen</td>	
 							<td>Many applications from growing plants to making electronics.</td>	
 							<td><img src="webimages/nitrogen.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupP.png"></td>
+							<td><img src="/images/pickupP.png"></td>
 							<td>Platinum</td>	
 							<td>Found in large quantities.  Useful as a catalyst and retains its high value on Earth.</td>	
 							<td><img src="webimages/pt.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupP.png"></td>
+							<td><img src="/images/pickupP.png"></td>
 							<td>Iridium</td>	
 							<td>Used in the power generators that keep your lights on.</td>	
 							<td><img src="webimages/ir.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupP.png"></td>
+							<td><img src="/images/pickupP.png"></td>
 							<td>Palladium</td>	
 							<td>Helps run your electronics.  Poor man's platinum.</td>	
 							<td><img src="webimages/pa.png"></td>
 						</tr>	
 						<tr>
-							<td><img src="images/pickupP.png"></td>
+							<td><img src="/images/pickupP.png"></td>
 							<td>Gold</td>	
 							<td>Shiny!  It's also used in your space helmet's sun visor.</td>	
 							<td><img src="webimages/au.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupP.png"></td>
+							<td><img src="/images/pickupP.png"></td>
 							<td>Rhodium</td>	
 							<td>It's really rare on Earth.  People still love something that's one of a kind.</td>	
 							<td><img src="webimages/rh.png"></td>	
 						</tr>	
 						<tr>
-							<td><img src="images/pickupP.png"></td>
+							<td><img src="/images/pickupP.png"></td>
 							<td>Ruthenium</td>	
 							<td>Used in small quantities to make solar panels that keep satellites floating.</td>	
 							<td><img src="webimages/ru.png"></td>	
 						<tr>
-							<td><img src="images/pickupW.png"></td>
+							<td><img src="/images/pickupW.png"></td>
 							<td>Space waste</td>	
 							<td>Not a complete waste.  Can be used to build houses back on Mars.</td>	
 							<td><img src="webimages/waste.png"></td>	
