--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis:200,400" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -48,17 +48,9 @@
     <div class="container">
 
       <div class="starter-template">
-        <img class="logo" src="images/logo.png" />
-        <h1>Asteroid Prospector</h1>
-        <p class="lead lead-minor"><small><i>A 2d game about mining asteroids.<br /> A <a href="https://2014.spaceappschallenge.org/project/asteroid-prospector-exeter/">NASA Space Apps</a> project.</i></small></p>
-        <p>
-          <a href="game.html" role="button" class="btn btn-success btn-lg">Play Now!</a>
-        </p>
-        <p class="submission">
-          <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">The Challenge</a>
-          <span class="separator">|</span>
-          <a href="https://2014.spaceappschallenge.org/project/asteroid-prospector-exeter/">Our Submission</a>
-        </p>
+        <img class="logo-ship" src="images/ship-thrust-angle.png" />
+        <h1>About</h1>
+        <h2>Page coming soon!</h2>
 
         <p class="social">
           <a href="http://asteroidprospectorexeter.tumblr.com" target="_new"><i class="fa fa-tumblr fa-2x"></i></a>
@@ -69,6 +61,12 @@
       </div>
 
     </div><!-- /.container -->
+
+    <footer>
+
+        <small><i>A <a href="https://2014.spaceappschallenge.org/project/asteroid-prospector-exeter/">NASA Space Apps</a> project.</i></small>
+
+    </footer>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
