changed link to game page to refer to root

--- a/original/credits.html
+++ b/original/credits.html
@@ -22,10 +22,10 @@
 			<div id="header">
 				<h1>Asteroid Prospector</h1>
 			</div>
-				
+
 			<div id="sidebar">
 				<ul>
-					<li><a href="game.html"><button type="button" style="width:100%;" class="btn btn-success btn-lg">Play</button></a></li><br>
+					<li><a href="/game.html"><button type="button" style="width:100%;" class="btn btn-success btn-lg">Play</button></a></li><br>
 					<li><a href="index.html"><button type="button" style="width:100%;" class="btn btn-info">Home</button></a></li>
 					<li><a href="story.html"><button type="button" style="width:100%;" class="btn btn-info">Story</button></a></li>
 					<li><a href="credits.html"><button type="button" style="width:100%;" class="btn btn-info">Credits</button></a></li>
@@ -41,10 +41,10 @@
 					<li>
 				</ul>
 			</div>
-			
+
 			<div id="main">
 				<h3>Credits</h3>
-					
+
 					<p>The following people have been involved in this project:</p>
 					<h5>Game coding</h5>
 						<ul>
@@ -111,7 +111,7 @@
 					<h5>Project Management</h5>
 						<ul>
 							<li>Ian Gentry</li>
-						</ul>	
+						</ul>
 					<h5>Other</h5>
 						<ul>
 							<li>Flag Images by <a href="http://www.icondrawer.com">IconDrawer</a></li>
