fixed retry link on game-low page, added game-low link to homepage

--- a/game-low.html
+++ b/game-low.html
@@ -38,7 +38,7 @@
      			</button>
 					<a href="index.html" class="navbar-brand"><i class="glyphicon glyphicon-globe"></i> APE Mining Corporation</a>
 					<div class="btnContainer navbar-brand">
-						<a href="game.html" class="btn btn-warning" id="restartGameBtn" value="Restart Game" ><i class="glyphicon glyphicon-refresh"></i> Retry</a>
+						<a href="game-low.html" class="btn btn-warning" id="restartGameBtn" value="Restart Game" ><i class="glyphicon glyphicon-refresh"></i> Retry</a>
 						<button class="btn btn-info btn-sm" id="pause" value="Pause Game" ><i class="glyphicon glyphicon-pause"></i> Pause</button>
 						&nbsp;
 					</div>
@@ -46,7 +46,7 @@
 
 				<div class="navbar-collapse collapse"   id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="game.html"><i class="glyphicon glyphicon-play"></i> Game</a></li>
+						<li class="active"><a href="game-low.html"><i class="glyphicon glyphicon-play"></i> Game</a></li>
 						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#handbook"><i class="glyphicon glyphicon-list-alt"></i> Employee Handbook
 							<b class="caret"></b>
 							</a>
@@ -159,7 +159,7 @@
 					<p>You still have quotas to meet - get back out there as soon as possible! </p>
 		      </div>
 		      <div class="modal-footer">
-		      	<a class="btn btn-success" href="game.html"><i class="glyphicon glyphicon-refresh"></i> Retry</a>
+		      	<a class="btn btn-success" href="game-low.html"><i class="glyphicon glyphicon-refresh"></i> Retry</a>
 		        <button type="button" class="btn" data-dismiss="modal">Close</button>
 		      </div>
 		    </div>
