--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           <a href="game.html" role="button" class="btn btn-success btn-lg">Play Now!</a>
         </p>
         <p class="submission">
+        	<a href="game-low.html">Play Lite Version</a>
+        </p>
+        <p class="submission">
           <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">The Challenge</a>
           <span class="separator">|</span>
           <a href="https://2014.spaceappschallenge.org/project/asteroid-prospector-exeter/">Our Submission</a>
